--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA24112-640x350.jpg'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -386,35 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/search/map/Mars/Viking/cerberus_enhanced'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/search/map/Mars/Viking/cerberus_enhanced'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/search/map/Mars/Viking/cerberus_enhanced'}, {'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/search/map/Mars/Viking/cerberus_enhanced'}]\n"
+      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced'}]\n"
      ]
     }
    ],
    "source": [
-    "hemisphere = hemisphere_soup.find(\"div\", class_='item')\n",
+    "hemisphere = hemisphere_soup.find_all(\"div\", class_='item')\n",
     "\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "for i in hemisphere:\n",
-    "    hemisphere_title = hemisphere.find(\"div\", class_='description').h3.text\n",
-    "   \n",
+    "for each_h in hemisphere:\n",
+    "    hemisphere_title = each_h.find(\"div\", class_='description').h3.text\n",
     "    base_link = 'https://astrogeology.usgs.gov'\n",
-    "    hemisphere_link = hemisphere.a['href']\n",
-    "    browser.visit(base_link + hemisphere_link)\n",
-    "    \n",
-    "    hemisphere_image_html = browser.html\n",
-    "    hemisphere_image_soup = bs(hemisphere_image_html, 'html.parser')\n",
-    "    \n",
-    "    image_link = hemisphere_image_soup.find('div', class_='downloads')\n",
-    "    image_url = image_link.find('li').a['href']\n",
-    "    \n",
+    "    hemisphere_link = base_link + each_h.a['href']\n",
+    "\n",
     "    image_dict = {}\n",
     "    image_dict['title'] = hemisphere_title\n",
     "    image_dict['img_url'] = hemisphere_link\n",
